--- a/style/main.css
+++ b/style/main.css
@@ -91,3 +91,42 @@ header .centerd div{
 	top:14px;
 	right:20px;
 }
+
+#top_pics{
+	width:100%;
+	height:480px;
+}
+
+#top_pics div:nth-child(1){
+	float:left;
+
+}
+
+#top_pics div:nth-child(1) img{
+	height:480px;
+	width:480px;
+	
+}
+#top_pics div:nth-child(2) {
+	float:left;
+	width:980px;
+
+
+	
+}
+
+#top_pics div:nth-child(2) img{
+	height:240px;
+	width:240px;
+	margin:0px;
+	
+}
+
+
+
+
+
+
+
+
+
