Done the homepage!! :expressionless:

--- a/style/main.css
+++ b/style/main.css
@@ -192,14 +192,17 @@ main aside ul li{
 }
 
 #content{
-	float:left;
 	margin-left:22px;
+	width:643px;
+	float:left;
+
 	
 }
 
 #content .head-box{
 	width:623px;
 	height:22px;
+	margin-bottom:22px;
 	background-color:#fff;
 	padding: 4px 10px;
 	
@@ -210,3 +213,45 @@ main aside ul li{
 	font-weight:normal;
 	
 }
+
+section#content figure{
+	float:left;
+	height:275px;
+	width:200px;
+	margin:0 21px 22px 0;
+	
+}
+
+main figure img{
+	height:200px;
+	width:200px;
+	
+}
+
+section#content figcaption{
+
+	width:200px;
+	height:75px;
+	background-color:#000;
+	margin-top:-4px
+}
+	
+	
+
+#new-products figure:nth-child(3n+0){
+	margin-right:0px;
+	
+}
+
+#new-couple figcaption{
+	width:200px;
+	height:150px;
+	margin-top:-4px;
+	background-color:#fb0002;
+}
+
+#new-couple figure:nth-child(1){
+	margin:22px 0;
+}
+
+
