--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,4 @@
-@CHARSET "windows-1255";
+@CHARSET "utf-8";
 
 body {
 	margin: 0px;
@@ -153,9 +153,25 @@ a {
 	bottom:0px;
 	left:0px;  
 	width:100%;
-	height:20%;
-	background-color:#000;
-	opacity:0.6;
+	height:18%;
+	background-color:rgba(0,0,0,.6);
+	padding-top:2%;
+}
+
+#top-bar-pics figure figcaption span{
+	opacity:100%;
+	margin-left:10px
+	
+}
+
+#top-bar-pics figure figcaption span:nth-child(1){
+	color:#fff;
+	font-size:35px;
+}
+
+#top-bar-pics figure figcaption span:nth-child(3){
+	color:#fb0002;
+	font-size:28px;
 }
 
 #top-bar-pics figure:nth-child(1){
@@ -182,6 +198,20 @@ main aside ul{
 	margin:0; 
 	color:#fff;
 	
+}
+
+main aside ul a {
+	color:inherit;
+	
+}
+
+main aside ul li.selected{
+	background-color:#000;	
+	
+}
+
+main aside ul li span{
+	float:right;
 }
 
 main aside ul li{
