--- a/style/main.css
+++ b/style/main.css
@@ -5,6 +5,7 @@ body {
 	padding: 0px;
 	font-family: Arial, Helvetica, sans-serif;
 	background-color:#EAEAEA;
+
 }
 
 .C-B{
@@ -27,7 +28,7 @@ figure{
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	
+	color: white;
 }
 
 .centerd{
