--- a/style/main.css
+++ b/style/main.css
@@ -1,11 +1,10 @@
-@CHARSET "windows-1255";
+@CHARSET "utf-8";
 
 body {
 	margin: 0px;
 	padding: 0px;
 	font-family: Arial, Helvetica, sans-serif;
 	background-color:#EAEAEA;
-
 }
 
 .C-B{
@@ -28,7 +27,7 @@ figure{
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	color: white;
+	
 }
 
 .centerd{
@@ -154,9 +153,24 @@ a {
 	bottom:0px;
 	left:0px;  
 	width:100%;
-	height:20%;
-	background-color:#000;
-	opacity:0.6;
+	height:18%;
+	background-color:rgba(0,0,0,.6);
+	padding-top:2%;
+}
+
+#top-bar-pics figure figcaption span{
+	margin-left:10px
+	
+}
+
+#top-bar-pics figure figcaption span:nth-child(1){
+	color:#fff;
+	font-size:35px;
+}
+
+#top-bar-pics figure figcaption span:nth-child(3){
+	color:#fb0002;
+	font-size:28px;
 }
 
 #top-bar-pics figure:nth-child(1){
@@ -183,6 +197,20 @@ main aside ul{
 	margin:0; 
 	color:#fff;
 	
+}
+
+main aside ul a {
+	color:inherit;
+	
+}
+
+main aside ul li.selected{
+	background-color:#000;	
+	
+}
+
+main aside ul li span{
+	float:right;
 }
 
 main aside ul li{
