--- a/templates/_product.html
+++ b/templates/_product.html
@@ -99,7 +99,7 @@
 							<p class="full-description" ng-bind="albums.album_long_description">
 							</p>
 							
-							<div id="add-to-cart-box">
+							<div class="inner-box">
 								<span class="price" ng-bind="albums.album_price | currency"></span>
 								<div id="qty-box">
 									
