--- a/style/main.css
+++ b/style/main.css
@@ -364,6 +364,14 @@ section#content figcaption{
 
 }
 
+.angleicon{
+	float:right;
+	width:16px;
+	height:10px;
+	margin-top: 3px;
+
+}
+
 #cart p {
 	float:left;
 	font-size:65%;
