--- a/templates/_category.html
+++ b/templates/_category.html
@@ -13,14 +13,21 @@
 				<aside>
 					<nav>
 						<ul ng-controller="genreList">
-							<a href="#/category/{{genre.genre_name}}" ng-repeat="genre in genres">
-							<li ng-class="{'selected' : checkIfCurrentGenre(genre.genre_name)}">{{genre.genre_name}}
+							
+							<li ng-repeat="genre in genres" ng-class="{'selected' : checkIfCurrentGenre(genre.genre_name)}">
+							<a href="#/category/{{genre.genre_name}}">{{genre.genre_name}}
 							<img  class="angleicon" src="Images/angle1.png" ng-show="checkSubGenre($index)"></img>
-							</li>
-							<ul ng-show="subgenres && checkIfCurrentGenre(genre.genre_name)">
-								<li  ng-repeat="subgenre in subgenres" > ---> {{subgenre.genre_name}}</li>
-							</ul>
 							</a>
+							
+							<ul ng-show="subgenres && checkIfCurrentGenre(genre.genre_name)">
+								
+								<li  ng-repeat="subgenre in subgenres" >
+								<a href="#/category/{{genre.genre_name}}1"> ---> {{subgenre.genre_name}}</a>
+								</li>
+							</ul>
+							</li>
+							
+							
 							
 						</ul>
 					</nav>
