--- a/style/main.css
+++ b/style/main.css
@@ -754,3 +754,53 @@ div.loading{
 	float:left;
 	width:640px;
 }
+
+.red-head{
+	background-color:#F00016;
+	height:22px;
+	padding:3px 0;
+	margin-bottom:8px;
+}
+
+.circle{
+	margin-left:6px;
+	background-color:#F10016;
+	float:left;
+	height:20px;
+	width:20px;
+	border-radius:20px;
+	text-align:center;
+}
+
+.selected-head .circle{
+	background-color:#fff !important;
+	color:#000 !important;
+}
+
+.red-head span{
+	color:#fff;
+	margin-left:6px;
+	font-size:70%;
+}
+
+#Checkout-page section{
+	border:1px solid #C5C5C5;
+	padding:10px;
+	
+}
+.inline{
+	float:left;
+	margin-right:12px;
+	
+}
+
+#Checkout-content p{
+	margin-bottom:0;
+	margin-top:10px;
+}
+
+#order_shipping_address{
+	width:360px;
+	
+}
+
