--- a/style/main.css
+++ b/style/main.css
@@ -622,9 +622,13 @@ input[type=number]{
 	
 }
 
-label{
-	font-size: 70%;
+label.line {
+
 	font-weight: bold;
+}
+
+label {
+	font-size: 70%;
 }
 	
 #register{
@@ -756,7 +760,7 @@ div.loading{
 }
 
 .red-head{
-	background-color:#F00016;
+	background-color:#393939;
 	height:22px;
 	padding:3px 0;
 	margin-bottom:8px;
@@ -764,15 +768,22 @@ div.loading{
 
 .circle{
 	margin-left:6px;
-	background-color:#F10016;
+	background-color:#EE0015;
+	color:#fff;
 	float:left;
 	height:20px;
 	width:20px;
 	border-radius:20px;
 	text-align:center;
+	line-height:21px;
 }
 
-.selected-head .circle{
+.valid-head{
+	background-color:#F00016;
+		
+}
+
+.valid-head .circle{
 	background-color:#fff !important;
 	color:#000 !important;
 }
@@ -786,6 +797,7 @@ div.loading{
 #Checkout-page section{
 	border:1px solid #C5C5C5;
 	padding:10px;
+	margin-bottom:8px;
 	
 }
 .inline{
@@ -801,6 +813,16 @@ div.loading{
 
 #order_shipping_address{
 	width:360px;
+	
+}
+
+#CC_expiretion_year{
+	width:100px;
+	
+}
+
+#CC_verification_number{
+	width:40px;
 	
 }
 
