--- a/style/main.css
+++ b/style/main.css
@@ -450,12 +450,11 @@ button{
 	margin-right:22px;
 }
 
-#full-size-image{
-	background-image: url('/../Musicstore/CoverArt/inutero.jpg');
+.full-size-image{
 	background-repeat: no-repeat;
 	background-size:100%;
-	width:230px;
-	height:230px;
+	width:230px!important;
+	height:230px!important;
 
 	
 }
