--- a/style/main.css
+++ b/style/main.css
@@ -97,6 +97,12 @@ header a{
 	padding:5px;
 }
 
+#welcome{
+	float: right;
+	margin-top: 20px;
+	
+}
+
 #top-bar h1{
 	float:left;
 	display:inline-block;
