--- a/templates/_product.html
+++ b/templates/_product.html
@@ -101,17 +101,15 @@
 							
 							<div class="inner-box">
 								<span class="price" ng-bind="albums.album_price | currency"></span>
-								<div id="qty-box">
-									
-									<div id="input-wrapper">Qty: <input type="number" maxlength="2" ></div>
-									
+								<div id="qty-box" ng-controller="CartController">
+									<div id="input-wrapper">Qty: <input type="number" min="0" maxlength="2" ng-init="quantity = 0" ng-model="quantity"></div>
 									<div id="qty-mini-box">
-										<div class="qty">-</div>
-										<div class="qty">+</div>
+										<div class="qty" ng-click="lowerQuantity()">-</div>
+										<div class="qty"  ng-click="quantity = (quantity + 1)"">+</div>
 										<div class="C-B"></div>
 									</div>
 									
-									<button>Add to cart</button>
+									<button ng-click="addToCart(albums.album_id, quantity)" ng-show="quantity > 0">Add to cart</button>
 								</div>
 							</div>
 						
