--- a/style/main.css
+++ b/style/main.css
@@ -100,6 +100,8 @@ header a{
 #welcome{
 	float: right;
 	margin-top: 20px;
+	color:#fff;
+	font-size:14px;
 	
 }
 
@@ -112,13 +114,6 @@ header a{
 	letter-spacing:-4px;
 	
 }
-
-#top-bar span {
-	color:#fff;
-	font-size:14px;
-}
-
-
 
 #cart_icon{
 	float:right;
@@ -887,5 +882,51 @@ div.row div.column:nth-child(1){
 	font-size:18px;
 	line-height:96%;
 	padding: 0px 10px;
+	
+}
+
+#search-results{
+	padding:0 10px;
+	display:table;
+	border-radius:3px;
+	width:255px;
+	background-color:#fff;
+    position: relative;
+    z-index: 200;
+    top: -18px;
+    left: 303px;
+    box-shadow: 2px 2px 10px #848484;
+}
+
+.single-search-result{
+	height:65px;
+	padding:10px 0;
+	border-bottom:1px solid #848484;
+}
+
+.single-search-result img{
+	height:65px;
+	width:65px;
+	display:block;
+	float:left;
+	
+}
+
+.single-search-result div{
+	float:left;
+	color:#000 !important;
+	padding:2px 10px;
+}
+
+.single-search-result div span:first-child{
+	font-weight:bold;
+	
+}
+
+
+
+
+#search-results .single-search-result:last-child{
+	border-bottom:none;
 	
 }
