--- a/templates/_login.html
+++ b/templates/_login.html
@@ -24,14 +24,34 @@
 			</div>
 			
 			<p class="full-description"> If you have an account with us, please log in.</p>
-			
-			<div>
-				<p> <label class="line" for="user_email">Email Address<span class="required">*</span> </label> <br> <input type="text" name="user_email" id="user_email" class="invalid"><br><span></span></p>
-				<p> <label class="line" for="user_password">Password<span class="required">*</span></label> <br> <input type="text" name="user_password" id="user_password" class="invalid"><br><span></span></p>
+			<form name="loginForm" novalidate>
+				<div>
+					<p> 
+						<label class="line" for="user_email">Email Address<span class="required">*</span> </label> <br>
+						
+						<input type="email" name="user_email" ng-model="login.user_email" id="user_email" ng-class="{invalid : loginForm.user_email.$dirty && loginForm.user_email.$invalid}" required><br>
+						
+						  <span class="required" ng-show="loginForm.user_email.$dirty && loginForm.user_email.$invalid">
+	 						 <span ng-show="loginForm.user_email.$error.required">Email is required.</span>
+	 						 <span ng-show="loginForm.user_email.$error.email">Invalid email address.</span>
+	  					</span>
+					</p>
+					
+					<p>
+						<label class="line" for="user_password">Password<span class="required">*</span></label> <br> 
+						<input type="password" name="user_password" ng-model="login.user_password" id="user_password" ng-class="{invalid : loginForm.user_password.$dirty && loginForm.user_password.$invalid}" required><br>
+						 <span class="required" ng-show="loginForm.user_password.$dirty && loginForm.user_password.$invalid">
+	 						 <span ng-show="loginForm.user_password.$error.required">Password is required.</span>
+	 						 <span ng-show="loginForm.user_password.$error.pattern">Invalid email password.</span>
+	  					</span>
+					</p>
+					
 				
-			</div>
-				<span class="required" id="required-line">* Required Fields</span>
-			<button>Login</button>
+				
+				</div>
+					<span class="required" id="required-line">* Required Fields</span>
+				<button ng-click="login_form()">Login</button>
+			</form>
 		</div>
 		
 
