--- a/style/main.css
+++ b/style/main.css
@@ -278,7 +278,7 @@ section#content figcaption{
 	color: white;
 	padding:5px;
 	width:190px;
-	height:75px;
+	min-height:75px;
 	background-color:#000;
 	margin-top:-4px
 }
