--- a/templates/_login.html
+++ b/templates/_login.html
@@ -14,7 +14,7 @@
 			
 			<p class="full-description">It is a long established fact that a reader will be distracted by the  Various versions have evolved over the years, sometimes by accident, sometimes on purpose </p>
 			
-			<button ng-click="regBox = true">Create an Account</button>
+			<button ng-click="turnRegBox( true )">Create an Account</button>
 		</div>
 		
 		<div id="register" class="inner-box">
@@ -50,7 +50,7 @@
 				
 				</div>
 					<span class="required" id="required-line">* Required Fields</span>
-				<button ng-click="login_form()">Login</button>
+				<button  ng-disabled="loginForm.$invalid" ng-click="login_form()">Login</button>
 			</form>
 		</div>
 		
@@ -65,7 +65,7 @@
 				
 				<div class="loading" ng-show="false"></div>
 					
-				<i class="ex-icon" ng-click="regBox = false"></i>
+				<i class="ex-icon" ng-click="turnRegBox( false )"></i>
 				
 				<h3>Registration</h3>
 				
@@ -74,22 +74,44 @@
 					<p> 
 						<label class="line" for="user_firstName">Profile Informations</label>
 						<br>
-						<input type="text" ng-model="register.user_firstname" name="user_firstName" id="user_firstName" placeholder="First Name">
-						<span class="required">First name is required!</span>
-						<input type="text" name="user_lastName" ng-model="register.user_lastname" id="user_lastName" placeholder="Last Name">
-						<span class="required">Last name is required!</span>
+						
+						<input type="text" ng-model="register.user_firstname" name="user_firstName" id="user_firstName" placeholder="First Name" ng-class="{invalid : regForm.user_firstName.$dirty && regForm.user_firstName.$invalid}" required>
+						<span class="required" ng-show="regForm.user_firstName.$dirty && regForm.user_firstName.$invalid">
+	 						 <span ng-show="regForm.user_firstName.$error.required">Firstname is required.</span>
+	 						 <span ng-show="regForm.user_firstName.$error.pattern">Invalid FirstName.</span>
+	  					</span>
+						
+						<input type="text" name="user_lastName" ng-model="register.user_lastname" id="user_lastName" placeholder="Last Name" ng-class="{invalid : regForm.user_lastName.$dirty && regForm.user_lastName.$invalid}" required>
+						<span class="required" ng-show="regForm.user_lastName.$dirty && regForm.user_lastName.$invalid">
+	 						 <span ng-show="regForm.user_lastName.$error.required">Lastname is required.</span>
+	 						 <span ng-show="regForm.user_lastName.$error.pattern">Invalid LastName.</span>
+	  					</span>
+						
 					</p>
 					
 					<p> 
 						<label class="line" for="user_email">Login Datas</label>
 						<br>
-						<input type="text" name="user_email" ng-model="register.user_email" id="user_email" placeholder="E-mail address">
-						<span class="required">Email address is required!</span>
-						<input type="password" ng-model="register.user_password"  name="user_password" id="user_password" placeholder="Password">
-						<span class="required">Password is required!</span>
-						<input type="password" name="user_re-password" id="user_re-password" placeholder="Password confirmation">
+						
+						<input type="email" name="user_email" ng-model="register.user_email" id="user_email" placeholder="E-mail address" ng-class="{invalid : regForm.user_email.$dirty && regForm.user_email.$invalid}" required>
+						<span class="required" ng-show="regForm.user_email.$dirty && regForm.user_email.$invalid">
+	 						 <span ng-show="regForm.user_email.$error.required">Email is required.</span>
+	 						 <span ng-show="regForm.user_email.$error.email">Invalid email address.</span>
+	  					</span>
+						
+						<input type="password" ng-model="register.user_password"  name="user_password" id="user_password" placeholder="Password" ng-class="{invalid : regForm.user_password.$dirty && regForm.user_password.$invalid}" required>
+						 <span class="required" ng-show="regForm.user_password.$dirty && regForm.user_password.$invalid">
+	 						 <span ng-show="regForm.user_password.$error.required">Password is required.</span>
+	 						 <span ng-show="regForm.user_password.$error.pattern">Invalid email password.</span>
+	  					</span>
+						
+						<input type="password"  name="user_rePassword" id="user_rePassword" placeholder="Password confirmation" required>
+						<span class="required" ng-show="true">
+	 						 <span ng-show="true">Password confrimation is required.</span>
+	 						 <span ng-show="regForm.user_rePassword.$error.pattern">Password does not match.</span>
+	  					</span>
 					</p>
-					<button ng-click="register_form()">Register</button>
+					<button ng-disabled="regForm.$invalid" ng-click="register_form()">Register</button>
 					
 					</form>
 				<div class="C-B"></div>
