--- a/templates/_login.html
+++ b/templates/_login.html
@@ -39,10 +39,10 @@
 					
 					<p>
 						<label class="line" for="user_password">Password<span class="required">*</span></label> <br> 
-						<input type="password" name="user_password" ng-model="login.user_password" id="user_password" ng-class="{invalid : loginForm.user_password.$dirty && loginForm.user_password.$invalid}" required><br>
+						<input type="password" name="user_password" ng-pattern="/^((?=.*[A-Z])(?=.*)[a-zA-Z\d]{6,})$/" ng-model="login.user_password" id="user_password" ng-class="{invalid : loginForm.user_password.$dirty && loginForm.user_password.$invalid}" required><br>
 						 <span class="required" ng-show="loginForm.user_password.$dirty && loginForm.user_password.$invalid">
 	 						 <span ng-show="loginForm.user_password.$error.required">Password is required.</span>
-	 						 <span ng-show="loginForm.user_password.$error.pattern">Invalid email password.</span>
+	 						 <span ng-show="loginForm.user_password.$error.pattern">Invalid password.</span>
 	  					</span>
 					</p>
 					
@@ -75,16 +75,19 @@
 						<label class="line" for="user_firstName">Profile Informations</label>
 						<br>
 						
-						<input type="text" ng-model="register.user_firstname" name="user_firstName" id="user_firstName" placeholder="First Name" ng-class="{invalid : regForm.user_firstName.$dirty && regForm.user_firstName.$invalid}" required>
+						<input type="text" ng-model="register.user_firstname" ng-minlength="2" ng-maxlength="12" name="user_firstName" id="user_firstName" placeholder="First Name" ng-class="{invalid : regForm.user_firstName.$dirty && regForm.user_firstName.$invalid}" required>
 						<span class="required" ng-show="regForm.user_firstName.$dirty && regForm.user_firstName.$invalid">
-	 						 <span ng-show="regForm.user_firstName.$error.required">Firstname is required.</span>
-	 						 <span ng-show="regForm.user_firstName.$error.pattern">Invalid FirstName.</span>
+	 						 <span ng-show="regForm.user_firstName.$error.required">First name is required.</span>
+	 						 <span ng-show="regForm.user_firstName.$error.pattern">Invalid First name.</span>
+	 						 <span ng-show="regForm.user_firstName.$error.minlength">First name is too short.</span>
+	 						 <span ng-show="regForm.user_firstName.$error.maxlength">First name is too long.</span>
 	  					</span>
 						
-						<input type="text" name="user_lastName" ng-model="register.user_lastname" id="user_lastName" placeholder="Last Name" ng-class="{invalid : regForm.user_lastName.$dirty && regForm.user_lastName.$invalid}" required>
+						<input type="text" name="user_lastName" ng-minlength="2" ng-maxlength="12" ng-model="register.user_lastname" id="user_lastName" placeholder="Last Name" ng-class="{invalid : regForm.user_lastName.$dirty && regForm.user_lastName.$invalid}" required>
 						<span class="required" ng-show="regForm.user_lastName.$dirty && regForm.user_lastName.$invalid">
-	 						 <span ng-show="regForm.user_lastName.$error.required">Lastname is required.</span>
-	 						 <span ng-show="regForm.user_lastName.$error.pattern">Invalid LastName.</span>
+	 						<span ng-show="regForm.user_lastName.$error.required">Lastname is required.</span>
+							<span ng-show="regForm.user_lastName.$error.minlength">Last name is too short.</span>
+	 						<span ng-show="regForm.user_lastName.$error.maxlength">Last name is too long.</span>
 	  					</span>
 						
 					</p>
@@ -94,22 +97,24 @@
 						<br>
 						
 						<input type="email" name="user_email" ng-model="register.user_email" id="user_email" placeholder="E-mail address" ng-class="{invalid : regForm.user_email.$dirty && regForm.user_email.$invalid}" required>
-						<span class="required" ng-show="regForm.user_email.$dirty && regForm.user_email.$invalid">
+						 <span class="required" ng-show="regForm.user_email.$dirty && regForm.user_email.$invalid">
 	 						 <span ng-show="regForm.user_email.$error.required">Email is required.</span>
 	 						 <span ng-show="regForm.user_email.$error.email">Invalid email address.</span>
 	  					</span>
 						
-						<input type="password" ng-model="register.user_password"  name="user_password" id="user_password" placeholder="Password" ng-class="{invalid : regForm.user_password.$dirty && regForm.user_password.$invalid}" required>
+						<input type="password" ng-pattern="/^((?=.*[A-Z])(?=.*)[a-zA-Z\d]{6,})$/" data-ng-model="register.user_password"  name="user_password" id="user_password" placeholder="Password" ng-class="{invalid : regForm.user_password.$dirty && regForm.user_password.$invalid}" required>
 						 <span class="required" ng-show="regForm.user_password.$dirty && regForm.user_password.$invalid">
 	 						 <span ng-show="regForm.user_password.$error.required">Password is required.</span>
-	 						 <span ng-show="regForm.user_password.$error.pattern">Invalid email password.</span>
+	 						 <span ng-show="regForm.user_password.$error.pattern">Invalid password.</span>
 	  					</span>
-						
-						<input type="password"  name="user_rePassword" id="user_rePassword" placeholder="Password confirmation" required>
-						<span class="required" ng-show="true">
-	 						 <span ng-show="true">Password confrimation is required.</span>
-	 						 <span ng-show="regForm.user_rePassword.$error.pattern">Password does not match.</span>
+	  					
+	  					<input type="password" ng-model="register.user_repassword"  name="user_repassword" id="user_repassword" placeholder="Password confirmation" ng-class="{invalid : regForm.user_repassword.$dirty && regForm.user_repassword.$invalid}" required data-password-verify="register.user_password">
+						 <span class="required" ng-show="regForm.user_repassword.$dirty && regForm.user_repassword.$invalid">
+	 						 <span ng-show="regForm.user_repassword.$error.required">Password confirmation is required.</span>
+	 						 <span ng-show="regForm.user_repassword.$error.passwordVerify">Password does not match.</span>
 	  					</span>
+
+
 					</p>
 					<button ng-disabled="regForm.$invalid" ng-click="register_form()">Register</button>
 					
