--- a/templates/_login.html
+++ b/templates/_login.html
@@ -95,8 +95,7 @@
 					<p> 
 						<label class="line" for="user_email">Login Datas</label>
 						<br>
-						
-						<input type="email" name="user_email" ng-model="register.user_email" id="user_email" placeholder="E-mail address" ng-class="{invalid : regForm.user_email.$dirty && regForm.user_email.$invalid}" required>
+						<input type="email" name="user_email" ng-model="register.user_email" id="user_email" placeholder="E-mail address" ng-class="{invalid : regForm.user_email.$dirty && regForm.user_email.$invalid}" required ng-blur="checkEmail(register.user_email)">
 						 <span class="required" ng-show="regForm.user_email.$dirty && regForm.user_email.$invalid">
 	 						 <span ng-show="regForm.user_email.$error.required">Email is required.</span>
 	 						 <span ng-show="regForm.user_email.$error.email">Invalid email address.</span>
