--- a/templates/_checkout.html
+++ b/templates/_checkout.html
@@ -45,7 +45,7 @@
 						
 					</aside>
 					
-					<div id="Checkout-content">
+					<div id="Checkout-content" ng-controller="CartController">
 					
 						<div id="Checkout-head" class="head-box">
 							<h3>Checkout</h3>
@@ -60,7 +60,7 @@
 							<p>
 								<label class="line" for="order_shipping_address">Address<span class="required">*</span> </label>
 								<br>
-								<input type="text" name="order_shipping_address" id="order_shipping_address" >
+								<input type="text" name="order_shipping_address" id="order_shipping_address" ng-model="checkout.address" >
 								<br>
 								<span class="required">This is a required field</span>
 							</p>
@@ -69,7 +69,7 @@
 								<p class="inline">
 									<label class="line" for="order_shipping_city">City<span class="required">*</span> </label>
 									<br>
-									<input type="text" name="order_shipping_city" id="order_shipping_city" >
+									<input type="text" name="order_shipping_city" id="order_shipping_city" ng-model="checkout.city" >
 									<br>
 									<span class="required">This is a required field</span>
 								</p>
@@ -77,7 +77,7 @@
 								<p class="inline">
 									<label class="line" for="order_shipping_zipcode">Zip/Postal Code<span class="required">*</span> </label>
 									<br>
-									<input type="text" name="order_shipping_zipcode" id="order_shipping_zipcode" >
+									<input type="text" name="order_shipping_zipcode" id="order_shipping_zipcode" ng-model="checkout.zipcode" >
 									<br>
 									<span class="required">This is a required field</span>
 								</p>
@@ -89,7 +89,7 @@
 							<p>
 								<label class="line" for="order_shipping_phone">Telphone<span class="required">*</span> </label>
 								<br>
-								<input type="text" name="order_shipping_phone" id="order_shipping_phone" >
+								<input type="text" name="order_shipping_phone" id="order_shipping_phone" ng-model="checkout.phone" >
 								<br>
 								<span class="required">This is a required field</span>
 							</p>
@@ -112,13 +112,13 @@
 						
 						<section ng-show="true">
 							<p>
-								<input type="radio" name="order_payment_method" value="" id="check">
+								<input type="radio" name="order_payment_method" value="money_order" id="check" ng-model="checkout.pay_method">
 								<label  for="check">Check / Money order</label>
 
 							</p>
 							
 							<p>
-								<input type="radio" name="order_payment_method" value="" id="CC">
+								<input type="radio" name="order_payment_method" value="credit_card" id="CC" ng-model="checkout.pay_method">
 								<label for="CC">Credit Card (saved)</label>
 
 							</p>
@@ -136,7 +136,7 @@
 								<p>
 									<label class="line" for="CC_type">Credit Card Type<span class="required">*</span> </label>
 									<br>
-									<select name="CC_type" id="CC_type" >
+									<select name="CC_type" id="CC_type">
 										<option value="visa">Visa</option>
 										<option value="masterCard">Master Card</option>
 										<option value="american_express">American Express</option>
@@ -148,15 +148,15 @@
 								<p>
 									<label class="line" for="CC_number">Credit Card Number<span class="required">*</span> </label>
 									<br>
-									<input type="text" name="CC_number" id="CC_number" >
+									<input type="text" name="CC_number" id="CC_number">
 									<br>
 									<span ng-show="false" class="required">This is a required field</span>
 								</p>
 								
 								<p>
-									<label class="line" for="CC_expiretion_month">Expiretion date<span class="required">*</span> </label>
+									<label class="line" for="CC_expiration_month">Expiration date<span class="required">*</span> </label>
 									<br>
-									<select name="CC_expiretion_month" id="CC_expiretion_month" >
+									<select name="CC_expiration_month" id="CC_expiration_month" >
 										<option value="01">01 - January</option>       
 										<option value="02">02 - February</option>       
 										<option value="03">03 - March</option>       
@@ -188,12 +188,12 @@
 								<p>
 									<label class="line" for="CC_verification_number">Card Verification Number<span class="required">*</span> </label>
 									<br>
-									<input type="text" maxlength="3" name="CC_verification_number" id="CC_verification_number" > <label  for="CC_verification_number">What is this?</label>
+									<input type="text" maxlength="3" name="CC_verification_number" id="CC_verification_number"> <label  for="CC_verification_number">What is this?</label>
 									<br>
 									
 								</p>
 								
-								<button>Continue</button>
+								<button ng-click="completeCheckout(total)">Continue</button>
 							
 							</div>
 							
@@ -205,7 +205,7 @@
 								<span>Order Review</span>
 						</div>
 						
-						<section class="table-container" ng-controller="CartController" ng-init="getCartObject()">
+						<section class="table-container"  ng-init="getCartObject()">
 							<div class="row">
 								<div class="column"><label class="line">Product Name</label></div>
 								<div class="column"><label class="line">Price</label></div>
