minor bug fixes

--- a/templates/_home.html
+++ b/templates/_home.html
@@ -36,6 +36,8 @@
 								{{album.album_name}}
 								<br>
 								{{album.album_artist}}
+								<br>
+								<span>{{album.album_description | limitTo:55}}...</span>
 							</figcaption>
 						</figure>
 						</a>
