--- a/style/main.css
+++ b/style/main.css
@@ -278,7 +278,7 @@ section#content figcaption{
 	color: white;
 	padding:5px;
 	width:190px;
-	min-height:75px;
+	min-height:136px;
 	background-color:#000;
 	margin-top:-4px
 }
@@ -292,6 +292,16 @@ section#content figcaption{
 
 #new-couple figcaption{
 	background-color:#fb0002;
+	padding:5px;
+	font-size:18px;
+	
+}
+
+
+#new-couple figcaption span{
+	font-size:14px;
+	color:#000;
+	
 }
 
 .full-caption figcaption{
