--- a/templates/_checkout.html
+++ b/templates/_checkout.html
@@ -51,58 +51,77 @@
 							<h3>Checkout</h3>
 						</div>
 						
-						<div class="red-head">
+						<div class="red-head" ng-class="{'valid-head' : step1.$valid}">
 							<div class="circle">1</div>
 							<span>Billing Informarion</span>
 						</div>
 						
-						<section ng-show="true">
-							<p>
-								<label class="line" for="order_shipping_address">Address<span class="required">*</span> </label>
-								<br>
-								<input type="text" name="order_shipping_address" id="order_shipping_address" ng-model="checkout.address" >
-								<br>
-								<span class="required">This is a required field</span>
-							</p>
+						<section ng-show="checkCurrentStep( 'Step1' )">
+							<form name="step1" novalidate>
+								<p>
+									<label class="line" for="order_shipping_address">Address<span class="required">*</span> </label>
+									<br>
+									<input type="text" name="order_shipping_address" id="order_shipping_address" ng-model="checkout.address" ng-pattern="/^([a-zA-Z\s\d.]*?)$/" required>
+									<br>
+									
+									<span class="required" ng-show="step1.order_shipping_address.$dirty && step1.order_shipping_address.$invalid">
+	 									 <span ng-show="step1.order_shipping_address.$error.required">Address is required.</span>
+	 									 <span ng-show="step1.order_shipping_address.$error.pattern">Invalid address.</span>
+									</span>
+								</p>
+									
+								<div>	
+									<p class="inline">
+										<label class="line" for="order_shipping_city">City<span class="required">*</span> </label>
+										<br>
+										<input type="text" name="order_shipping_city" id="order_shipping_city" ng-model="checkout.city" ng-pattern="/^([a-zA-Z\s]{3,})$/" required>
+										<br>
+										
+										<span class="required" ng-show="step1.order_shipping_city.$dirty && step1.order_shipping_city.$invalid">
+	 										<span ng-show="step1.order_shipping_city.$error.required">City is required.</span>
+	 										<span ng-show="step1.order_shipping_city.$error.pattern">Invalid City.</span>
+										</span>
+									</p>
+									
+									<p class="inline">
+										<label class="line" for="order_shipping_zipcode">Zip/Postal Code<span class="required">*</span> </label>
+										<br>
+										<input type="text" name="order_shipping_zipcode" id="order_shipping_zipcode" ng-model="checkout.zipcode" ng-pattern="/^([0-9]{4,9})$/" required>
+										<br>
+										
+										<span class="required" ng-show="step1.order_shipping_zipcode.$dirty && step1.order_shipping_zipcode.$invalid">
+	 										<span ng-show="step1.order_shipping_zipcode.$error.required">Zip Code is required.</span>
+	 										<span ng-show="step1.order_shipping_zipcode.$error.pattern">Invalid Zip Code.</span>
+										</span>
+									</p>
+									
+									<div class="C-B"></div>
+									
+								</div>
 								
-							<div>	
-								<p class="inline">
-									<label class="line" for="order_shipping_city">City<span class="required">*</span> </label>
+								<p>
+									<label class="line" for="order_shipping_phone">Telphone<span class="required">*</span> </label>
 									<br>
-									<input type="text" name="order_shipping_city" id="order_shipping_city" ng-model="checkout.city" >
+									<input type="text" name="order_shipping_phone" id="order_shipping_phone" ng-model="checkout.phone" ng-pattern="/^([0-9]{2,4}[-]{1}[0-9]{7,8})$/" required>
 									<br>
-									<span class="required">This is a required field</span>
+									
+									<span class="required" ng-show="step1.order_shipping_phone.$dirty && step1.order_shipping_phone.$invalid">
+ 										<span ng-show="step1.order_shipping_phone.$error.required">Telphone is required.</span>
+ 										<span ng-show="step1.order_shipping_phone.$error.pattern">Invalid Telphone.</span>
+									</span>
 								</p>
 								
-								<p class="inline">
-									<label class="line" for="order_shipping_zipcode">Zip/Postal Code<span class="required">*</span> </label>
-									<br>
-									<input type="text" name="order_shipping_zipcode" id="order_shipping_zipcode" ng-model="checkout.zipcode" >
-									<br>
-									<span class="required">This is a required field</span>
+								
+								<p>
+									<span class="required">* Required Fields</span>
+									
+									<button ng-disabled="step1.$invalid" ng-click="goTo('#/checkout/Step2')">Continue</button>
 								</p>
 								
-								<div class="C-B"></div>
+							</form>
 								
-							</div>
-							
-							<p>
-								<label class="line" for="order_shipping_phone">Telphone<span class="required">*</span> </label>
-								<br>
-								<input type="text" name="order_shipping_phone" id="order_shipping_phone" ng-model="checkout.phone" >
-								<br>
-								<span class="required">This is a required field</span>
-							</p>
-							
-							
-							<p>
-								<span class="required">* Required Fields</span>
-								
-								<button>Continue</button>
-							</p>
-							
-							
 							<div class="C-B"></div>
+							
 						</section>
 						
 						<div class="red-head">
@@ -110,7 +129,7 @@
 								<span>Payment Information</span>
 						</div>
 						
-						<section ng-show="true">
+						<section ng-show="checkCurrentStep( 'Step2' )">
 							<p>
 								<input type="radio" name="order_payment_method" value="money_order" id="check" ng-model="checkout.pay_method">
 								<label  for="check">Check / Money order</label>
@@ -205,34 +224,42 @@
 								<span>Order Review</span>
 						</div>
 						
-						<section class="table-container"  ng-init="getCartObject()">
-							<div class="row">
-								<div class="column"><label class="line">Product Name</label></div>
-								<div class="column"><label class="line">Price</label></div>
-								<div class="column"><label class="line">Qty</label></div>
-								<div class="column"><label class="line">Subtotal</label></div>
+						<div ng-show="checkCurrentStep( 'Step3' )">
+							<section class="table-container"  ng-init="getCartObject()">
+								<div class="row">
+									<div class="column"><label class="line">Product Name</label></div>
+									<div class="column"><label class="line">Price</label></div>
+									<div class="column"><label class="line">Qty</label></div>
+									<div class="column"><label class="line">Subtotal</label></div>
+								
+								</div>
+								
+								<div class="row"  ng-repeat="albums in cart">
+									<div class="column">{{albums[0].album_artist}} - {{albums[0].album_name}}</div>
+									<div class="column">{{albums[0].album_price | currency}}</div>
+									<div class="column">{{albums[0].quantity}}</div>
+									<div class="column">{{albums[0].quantity * albums[0].album_price | currency}} </div>
+								
+								</div>
+								
+								<div class="row" id="total-line">
+									<div class="column"></div>
+									<div class="column"></div>
+									<div class="column"><label class="line">Total</label></div>
+									<div class="column"><label class="line">{{total | currency}}</label></div>
+								
+								</div>
 							
+							
+							</section>
+							
+							<div>
+								<span class="full-description">Forgot an Item? &nbsp</span>
+								<a href="#/home">Edit Your Cart</a>
+								
+								<button>Place Order</button>
 							</div>
-							
-							<div class="row"  ng-repeat="albums in cart">
-								<div class="column">{{albums[0].album_artist}} - {{albums[0].album_name}}</div>
-								<div class="column">{{albums[0].album_price | currency}}</div>
-								<div class="column">{{albums[0].quantity}}</div>
-								<div class="column">{{albums[0].quantity * albums[0].album_price | currency}} </div>
-							
-							</div>
-							
-							<div class="row" id="total-line">
-								<div class="column"></div>
-								<div class="column"></div>
-								<div class="column"><label class="line">Total</label></div>
-								<div class="column"><label class="line">{{total | currency}}</label></div>
-							
-							</div>
-						
-						
-						</section>
-						
+						</div>
 						
 					</div>
 					
