--- a/templates/_login.html
+++ b/templates/_login.html
@@ -29,9 +29,9 @@
 					<p> 
 						<label class="line" for="user_email">Email Address<span class="required">*</span> </label> <br>
 						
-						<input type="email" name="user_email" ng-model="login.user_email" id="user_email" ng-class="{invalid : loginForm.user_email.$dirty && loginForm.user_email.$invalid}" required><br>
+						<input type="email" name="user_email" ng-model="login.user_email" id="user_email" required><br>
 						
-						  <span class="required" ng-show="loginForm.user_email.$dirty && loginForm.user_email.$invalid">
+						 <span class="required" ng-show="loginForm.user_email.$dirty && loginForm.user_email.$invalid">
 	 						 <span ng-show="loginForm.user_email.$error.required">Email is required.</span>
 	 						 <span ng-show="loginForm.user_email.$error.email">Invalid email address.</span>
 	  					</span>
@@ -39,7 +39,7 @@
 					
 					<p>
 						<label class="line" for="user_password">Password<span class="required">*</span></label> <br> 
-						<input type="password" name="user_password" ng-pattern="/^((?=.*[A-Z])(?=.*)[a-zA-Z\d]{6,})$/" ng-model="login.user_password" id="user_password" ng-class="{invalid : loginForm.user_password.$dirty && loginForm.user_password.$invalid}" required><br>
+						<input type="password" name="user_password" ng-pattern="/^((?=.*[A-Z])(?=.*)[a-zA-Z\d]{6,})$/" ng-model="login.user_password" id="user_password" required><br>
 						 <span class="required" ng-show="loginForm.user_password.$dirty && loginForm.user_password.$invalid">
 	 						 <span ng-show="loginForm.user_password.$error.required">Password is required.</span>
 	 						 <span ng-show="loginForm.user_password.$error.pattern">Invalid password.</span>
@@ -75,7 +75,7 @@
 						<label class="line" for="user_firstName">Profile Informations</label>
 						<br>
 						
-						<input autocomplete="off" type="text" ng-model="register.user_firstname" ng-minlength="2" ng-maxlength="12" name="user_firstName" id="user_firstName" placeholder="First Name" ng-class="{invalid : regForm.user_firstName.$dirty && regForm.user_firstName.$invalid}" required>
+						<input autocomplete="off" type="text" ng-model="register.user_firstname" ng-minlength="2" ng-maxlength="12" name="user_firstName" id="user_firstName" placeholder="First Name"  required>
 						<span class="required" ng-show="regForm.user_firstName.$dirty && regForm.user_firstName.$invalid">
 	 						 <span ng-show="regForm.user_firstName.$error.required">First name is required.</span>
 	 						 <span ng-show="regForm.user_firstName.$error.pattern">Invalid First name.</span>
@@ -83,7 +83,7 @@
 	 						 <span ng-show="regForm.user_firstName.$error.maxlength">First name is too long.</span>
 	  					</span>
 						
-						<input autocomplete="off" type="text" name="user_lastName" ng-minlength="2" ng-maxlength="12" ng-model="register.user_lastname" id="user_lastName" placeholder="Last Name" ng-class="{invalid : regForm.user_lastName.$dirty && regForm.user_lastName.$invalid}" required>
+						<input autocomplete="off" type="text" name="user_lastName" ng-minlength="2" ng-maxlength="12" ng-model="register.user_lastname" id="user_lastName" placeholder="Last Name" required>
 						<span class="required" ng-show="regForm.user_lastName.$dirty && regForm.user_lastName.$invalid">
 	 						<span ng-show="regForm.user_lastName.$error.required">Lastname is required.</span>
 							<span ng-show="regForm.user_lastName.$error.minlength">Last name is too short.</span>
@@ -95,20 +95,20 @@
 					<p> 
 						<label class="line" for="user_email">Login Datas</label>
 						<br>
-						<input autocomplete="off" type="email" name="user_email" ng-model="register.user_email" id="user_email" placeholder="E-mail address" ng-class="{invalid : regForm.user_email.$dirty && regForm.user_email.$invalid}" required ng-blur="checkEmail(register.user_email)">
+						<input autocomplete="off" type="email" name="user_email" ng-model="register.user_email" id="user_email" placeholder="E-mail address" required ng-blur="checkEmail(register.user_email)">
 						 <span class="required" ng-show="regForm.user_email.$dirty && regForm.user_email.$invalid">
 	 						 <span ng-show="regForm.user_email.$error.required">Email is required.</span>
 	 						 <span ng-show="regForm.user_email.$error.email">Invalid email address.</span>
 	 						 <span ng-show="regForm.user_email.$error.availability">Email address is taken.</span>
 	  					</span>
 						
-						<input autocomplete="off" type="password" ng-pattern="/^((?=.*[A-Z])(?=.*)[a-zA-Z\d]{6,})$/" data-ng-model="register.user_password"  name="user_password" id="user_password" placeholder="Password" ng-class="{invalid : regForm.user_password.$dirty && regForm.user_password.$invalid}" required>
+						<input autocomplete="off" type="password" ng-pattern="/^((?=.*[A-Z])(?=.*)[a-zA-Z\d]{6,})$/" data-ng-model="register.user_password"  name="user_password" id="user_password" placeholder="Password" required>
 						 <span class="required" ng-show="regForm.user_password.$dirty && regForm.user_password.$invalid">
 	 						 <span ng-show="regForm.user_password.$error.required">Password is required.</span>
 	 						 <span ng-show="regForm.user_password.$error.pattern">Password must be at least 6 characters, with at least one capital letter.</span>
 	  					</span>
 	  					
-	  					<input autocomplete="off" type="password" ng-model="register.user_repassword"  name="user_repassword" id="user_repassword" placeholder="Password confirmation" ng-class="{invalid : regForm.user_repassword.$dirty && regForm.user_repassword.$invalid}" required data-password-verify="register.user_password">
+	  					<input autocomplete="off" type="password" ng-model="register.user_repassword"  name="user_repassword" id="user_repassword" placeholder="Password confirmation" required data-password-verify="register.user_password">
 						 <span class="required" ng-show="regForm.user_repassword.$dirty && regForm.user_repassword.$invalid">
 	 						 <span ng-show="regForm.user_repassword.$error.required">Password confirmation is required.</span>
 	 						 <span ng-show="regForm.user_repassword.$error.passwordVerify">Password does not match.</span>
